[tool.poetry]
name = "maffuflask"
version = "0.1.0"
description = ""
authors = ["AkimGomes <ak-gomes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
